correct swagger documentation
